# Game-of-Life-Simulation

./: README.md
Code/CommandLineApps/: CMakeLists.txt  Still_life.cpp  gofSimulator.cpp
Code/Lib/: CMakeLists.txt  Game.cpp  Game.h  gofSimulator.cpp  golGrid.cpp  golGrid.h
Testing/: CMakeLists.txt  unit_test.cpp
Testing/Data/: input.txt  unittest_invalid_content.txt  unittest_not_rectangle.txt
